submariner/frontend-app/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontendservice
  namespace: frontend 
spec: 
  selector: 
    app: frontend 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 8180
